<resources>
    <string name="app_name">Project BUS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_btn_name">Вхід</string>
    <string name="signup_btn_name">Зареєструватися</string>
    <string name="hint_login">Логін</string>
    <string name="hint_pass">Пароль</string>
    <string name="hint_reg_login">Введіть логін</string>
    <string name="text_reg_login">Логін:</string>
    <string name="text_reg_name">Ім\'я:</string>
    <string name="hint_reg_name">Введіть ваше ім\'я</string>
    <string name="text_reg_surname">Прізвище:</string>
    <string name="hint_reg_surname">Введіть ваше прізвище</string>
    <string name="text_reg_bus_model">Марка транспорту:</string>
    <string name="hint_reg_bus_model">Введіть марку транспорту</string>
    <string name="text_reg_bus_number">Номерний знак:</string>
    <string name="hint_reg_bus_number">Введіть номерний знак</string>
    <string name="text_reg_bus_capacity">Кількість місць:</string>
    <string name="hint_reg_bus_capacity">Введіть кількість місць</string>
    <string name="nav_setting">Налаштування</string>
    <string name="nav_exit">Вихід</string>
    <string name="nav_bottom">Аккаунт</string>
    <string name="nav_create">Додати</string>
    <string name="nav_show">Показати</string>
    <string name="save_changes_btn_name">Зберегти зміни</string>
    <string name="text_freeSeats">Вільних місць:</string>
    <string name="text_add_client">Додати пасажира</string>
    <string name="text_passangers_list">Список пасажирів:</string>
    <string name="text_create_route">Створити маршрут</string>
    <string name="text_reg_pass">Пароль:</string>
    <string name="text_reg_pass_repeate">Повторіть пароль:</string>
    <string name="hint_reg_pass">Введіть пароль</string>
    <string name="hint_reg_pass_repeat">Повторіть пароль</string>
    <string name="error_not_equal_pass">Паролі не співпадають!</string>
    <string name="error_empty_field">Поле не може бути пустим!</string>
    <string name="message_exit">Натисніть назад ще раз для виходу.</string>
    <string name="text_trip_number">№ рейсу:</string>
    <string name="hint_trip_number">Введіть номер рейсу</string>
    <string name="hello">hello</string>
</resources>
