<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_above="@+id/signUpBtn">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_reg_login"
                style="@style/MyTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regFieldLogin"
                android:hint="@string/hint_reg_login"/>

            <TextView
                style="@style/MyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_reg_pass" />

            <EditText
                android:inputType="textPassword"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regFieldPass"
                android:hint="@string/hint_reg_pass" />

            <EditText
                android:inputType="textPassword"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regFieldPassRepeat"
                android:hint="@string/hint_reg_pass_repeat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_reg_name"
                style="@style/MyTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regFieldName"
                android:hint="@string/hint_reg_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_reg_surname"
                style="@style/MyTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regFieldSurname"
                android:hint="@string/hint_reg_surname"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_btn_name"
        android:id="@+id/signUpBtn"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>